--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,9 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.production
     command: make test
     volumes:
       - "./app:/app"
+    image: avisdockerstore/devops-for-programmers-project-lvl1
 
