--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,11 +13,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Run tests
+        run: make test
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Build & push the image
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          docker-compose -f docker-compose.yml build app
+          docker-compose -f docker-compose.yml push app
