--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,5 @@ services:
     command: make test
     volumes:
       - "./app:/app"
-    image: avisdockerstore/devops-for-programmers-project-lvl1
+    image: avisdockerstore/devops-for-programmers-project-lvl1:latest
 
