--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,9 +13,9 @@ jobs:
     steps:   
 
       - name: Run tests
-        run: make ci
+        run: ../../make ci
 
       - name: Build & push the image
         run: |
-          docker-compose -f docker-compose.yml build app
-          docker-compose -f docker-compose.yml push app
+          ../../docker-compose -f docker-compose.yml build app
+          ../../docker-compose -f docker-compose.yml push app
