--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,24 +1,18 @@
 name: ci
+
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  workflow_dispatch:
 
 jobs:
-  build:
+  docker:
     runs-on: ubuntu-latest
     steps:   
-
-      - name: Run tests
-        working-directory: .
-        run: |
-          ls .. -lah
+      - uses: actions/checkout@v2
+      - name: Run tests      
+        run:
           make ci
 
       - name: Build & push the image
         run: |
-          ../../docker-compose -f docker-compose.yml build app
-          ../../docker-compose -f docker-compose.yml push app
+          docker-compose -f docker-compose.yml build app
+          docker-compose -f docker-compose.yml push app
