--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run tests      
         run:          
-          make test
+          make ci
 
       - name: Build & push the image
         run: |
