--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   docker:
-    runs-on: ubuntu-latest
+    runs-on: node:14.18.1
     steps:   
       - uses: actions/checkout@v2
       - name: Run tests      
