--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: Dockerfile
     command: npm run dev
-    ports: # Проброс портов
+    ports:
       - "8080:8080"
     volumes:
       - "./app:/app"
