--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,8 +1,7 @@
 FROM node:14.18.1
 WORKDIR /app
 
-COPY app/package.json package.json
-COPY app/package-lock.json package-lock.json
+COPY app/. .
 
 RUN npm ci
 
