--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,26 @@
 version: "3"
 services:
+
   app:
     image: avisdockerstore/devops-for-programmers-project-lvl1:latest
     build:
       context: .
       dockerfile: Dockerfile.production
     command: make test
+    environment:
+      DATABASE_NAME: $DATABASE_NAME
+      DATABASE_USERNAME: $DATABASE_USERNAME
+      DATABASE_PASSWORD: $DATABASE_PASSWORD
+      DATABASE_PORT: $DATABASE_PORT
+      DATABASE_HOST: $DATABASE_HOST
+    depends_on:
+     - db
+
+  db:
+    image: postgres:latest
+    environment:
+      POSTGRES_NAME: $DATABASE_NAME
+      POSTGRES_PASSWORD: $DATABASE_PASSWORD
 
     
 
