--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,25 +2,21 @@ version: "3"
 services:
 
   app:
+    env_file:
+      - ./app/.env
     image: avisdockerstore/devops-for-programmers-project-lvl1:latest
     build:
       context: .
       dockerfile: Dockerfile.production
     command: make test
-    environment:
-      DATABASE_NAME: $DATABASE_NAME
-      DATABASE_USERNAME: $DATABASE_USERNAME
-      DATABASE_PASSWORD: $DATABASE_PASSWORD
-      DATABASE_PORT: $DATABASE_PORT
-      DATABASE_HOST: $DATABASE_HOST
     depends_on:
      - db
 
   db:
+    env_file:
+      - ./app/.env
     image: postgres:latest
-    environment:
-      POSTGRES_NAME: $DATABASE_NAME
-      POSTGRES_PASSWORD: $DATABASE_PASSWORD
+
 
     
 
