--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,14 @@ services:
       context: .
       dockerfile: Dockerfile.production
     command: make test
-    depends_on:
-     - db
-
-  db:
-    env_file:
-      - ./app/.env
-    image: postgres:latest
-
+#    depends_on:
+#     - db
+#
+#  db:
+#    env_file:
+#      - ./app/.env
+#    image: postgres:latest
+#
 
     
 
