--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: "3"
 services:
 
   app:
-    env_file:
-      - ./app/.env
+#    env_file:
+#      - ./app/.env
     image: avisdockerstore/devops-for-programmers-project-lvl1:latest
     build:
       context: .
