--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,21 @@ version: "3"
 services:
 
   app:
-#    env_file:
-#      - ./app/.env
+    env_file:
+      - ./app/.env
     image: avisdockerstore/devops-for-programmers-project-lvl1:latest
     build:
       context: .
       dockerfile: Dockerfile.production
     command: make test
-#    depends_on:
-#     - db
-#
-#  db:
-#    env_file:
-#      - ./app/.env
-#    image: postgres:latest
-#
+    depends_on:
+     - db
+
+  db:
+    env_file:
+      - ./app/.env
+    image: postgres:latest
+
 
     
 
