--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,6 +7,10 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:   
+      - name: copy env file
+        run:          
+          cp .env.example app/.env
+
       - uses: actions/checkout@v2
       - name: Run tests      
         run:          
