--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,13 +7,10 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:   
-      - name: copy env file
-        run:          
-          cp .env.example app/.env
-
       - uses: actions/checkout@v2
       - name: Run tests      
-        run:          
+        run: |
+          cp .env.example app/.env         
           make ci
 
 
