--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,8 +9,7 @@ jobs:
     steps:   
       - uses: actions/checkout@v2
       - name: Run tests      
-        run: |
-          cp .env.example app/.env         
+        run:          
           make ci
 
 
