--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-DATABASE_NAME=db
+DATABASE_NAME=postgres
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=postgres
-DATABASE_PORT=5432
-DATABASE_HOST=localhost
+DATABASE_HOST=db
+
+
