--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,10 +1,12 @@
 FROM node:14.18.1
 WORKDIR /app
 
-COPY app/. .
+COPY app/package.json package.json
+COPY app/package-lock.json package-lock.json
 
 RUN npm ci
 
+COPY app/. .
 
 EXPOSE 8080
 
