--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,13 +19,13 @@ services:
   db:
     image: postgres:13-alpine
     environment:
+      POSTGRES_NAME: $DATABASE_NAME
+      POSTGRES_PASSWORD: $DATABASE_PASSWORD
       DATABASE_NAME: $DATABASE_NAME
       DATABASE_USERNAME: $DATABASE_USERNAME
       DATABASE_PASSWORD: $DATABASE_PASSWORD
       DATABASE_PORT: $DATABASE_PORT
       DATABASE_HOST: $DATABASE_HOST
-
-
 
     
 
