--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,10 @@ services:
       DATABASE_PASSWORD: $DATABASE_PASSWORD
       DATABASE_PORT: $DATABASE_PORT
       DATABASE_HOST: $DATABASE_HOST
-
-    
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U habrpguser -d habrdb"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
 
