--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.6"
+version: "2.4"
 
 services:
   app:
@@ -7,8 +7,8 @@ services:
       context: .
       dockerfile: Dockerfile.production
     depends_on:
-      - db
-      
+      db:
+          condition: service_healthy
     command: ["make", "test"]
     environment:
       DATABASE_NAME: $DATABASE_NAME
