--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.production
+    command: npm test
     depends_on:
       db:
-          condition: service_healthy
+        condition: service_healthy
     environment:
       DATABASE_NAME: $DATABASE_NAME
       DATABASE_USERNAME: $DATABASE_USERNAME
